fix: z-index issiues

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -134,7 +134,7 @@ a.as-btn {
 
 dialog {
 	position: fixed;
-	z-index: 15;
+	z-index: 110;
 	top: 0;
 	left: 0;
 	width: 100%;
