--- a/resources/scss/components/helper.scss
+++ b/resources/scss/components/helper.scss
@@ -5,7 +5,7 @@
 	$bubble-gap: 15px;
 	$bubble-bg: rgba(
 		$color: map-get($colors, "primary"),
-		$alpha: 0.5,
+		$alpha: 0.75,
 	);
 
 	position: relative;
@@ -39,7 +39,7 @@
 
 		padding: 0.5em 1em;
 		border-radius: 1em;
-		z-index: 5;
+		z-index: 10;
 		color: map-get($map: $colors, $key: "light");
 
 		transition: 0.25s;
