--- a/resources/scss/components/invoiceRenderer.scss
+++ b/resources/scss/components/invoiceRenderer.scss
@@ -71,7 +71,7 @@ body:has(.invoice-renderer) {
 
 				background-color: rgba($color: map-get($colors, "light"), $alpha: 0.5);
 				backdrop-filter: blur(5px);
-				z-index: 5;
+				z-index: 10;
 				border-radius: 1em;
 
 				> ul {
